0030630: Visualization - wrong visualization of shape with mirrored transformation

Solids with mirror location are displayed, according to their normals.

vaspects -setBackFaceColor, added command to set backface color.